podinfo/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apps
  namespace: dev
spec:
  selector:
    istio: ingressgateway-public
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "podinfo.127.0.0.1.nip.io"
  - port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: apps-tls-certs
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
    hosts:
    - "podinfo.127.0.0.1.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: dev
spec:
  hosts:
  - "podinfo.127.0.0.1.nip.io"
  gateways:
  - apps
  http:
  - match:
      - uri: 
          prefix: /
    delegate:
      name: ingress-frontend  
      namespace: dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-frontend
  namespace: dev
spec:
  http:
  - match:
      - uri: 
          prefix: /
    route:
      - destination:
          host: frontend
